--- a/css/home_style.css
+++ b/css/home_style.css
@@ -3,9 +3,9 @@
     width: 90%;
     max-width: 700px;
     display: grid;
-    justify-content: center;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 1fr;
 }
+
 header {
     grid-column: 1/3;
     grid-row:1;
@@ -14,9 +14,12 @@ nav {
     grid-column: 1/3;
     grid-row:2;
 }
-
-body {
-    
+article {
+    grid-column: 1/3;
+    grid-row:3;
 }
-
+footer {
+    grid-column: 1/3;
+    grid-row:4;
+}
 
