--- a/css/all_style.css
+++ b/css/all_style.css
@@ -9,3 +9,13 @@ h2 {
 p, li {
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.container{
+    padding: 0 2rem;
+    background-color: rgb(215, 215, 215);
+}
+
+body{
+    margin-top: 0;
+    background-color: grey;
+}
