--- a/css/sub_style.css
+++ b/css/sub_style.css
@@ -12,17 +12,23 @@ header {
     justify-self: center;
 }
 
-nav{
-    grid-column: 1;
+.menu{
+    grid-column: 1/3;
     grid-row:2;
 }
 
+.table{
+    grid-column: 1;
+    grid-row:3;
+}
+
+
 article{
     grid-column: 2;
-    grid-row:2;
+    grid-row:3;
 }
 section{
     grid-column: 3;
-    grid-row:2;
+    grid-row:3;
 }
 
