--- a/css/home_style.css
+++ b/css/home_style.css
@@ -7,19 +7,19 @@
 }
 
 header {
-    grid-column: 1/3;
+    grid-column: 1;
     grid-row:1;
 }
 nav {
-    grid-column: 1/3;
+    grid-column: 1;
     grid-row:2;
 }
 article {
-    grid-column: 1/3;
+    grid-column: 1;
     grid-row:3;
 }
 footer {
-    grid-column: 1/3;
+    grid-column: 1;
     grid-row:4;
 }
 
