--- a/css/sub_style.css
+++ b/css/sub_style.css
@@ -7,14 +7,13 @@
 }
 
 header {
-    grid-column: 1/3;
+    grid-column: 1/5;
     grid-row:1;
     justify-self: center;
 }
 
 .menu{
-    grid-column-start: 1;
-    grid-column-end: 3;
+    grid-column-start: 1/5;
     grid-row:2;
 }
 
