--- a/css/sub_style.css
+++ b/css/sub_style.css
@@ -7,13 +7,15 @@
 }
 
 header {
-    grid-column: 1/5;
+    grid-column-start: 1;
+    grid-column-end: 5;
     grid-row:1;
     justify-self: center;
 }
 
 .menu{
-    grid-column-start: 1/5;
+    grid-column-start: 1;
+    grid-column-end: 5;
     grid-row:2;
 }
 
