--- a/css/all_style.css
+++ b/css/all_style.css
@@ -1,5 +1,6 @@
 h1{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: rgb(0, 105, 255);
 }
 
 h2 {
@@ -17,5 +18,6 @@ p, li {
 
 body{
     margin-top: 0;
+    margin-bottom: 0;
     background-color: grey;
 }
