Made sub style menus look better

--- a/css/sub_style.css
+++ b/css/sub_style.css
@@ -28,9 +28,12 @@ header {
 article{
     grid-column: 2;
     grid-row:3;
+    margin-left: 10px;
 }
 section{
     grid-column: 3;
     grid-row:3;
 }
-
+.table li{
+    padding-bottom: 12px;
+}
