Article padding and name change

--- a/css/sub_style.css
+++ b/css/sub_style.css
@@ -36,9 +36,9 @@ section{
 }
 .table li{
     padding-bottom: 12px;
-    justify-self: center;
-}
-.table ul{
-    justify-self: center;
 }
 
+
+.article_down{
+    padding-top: 57px;
+}
