Progress made on is-current

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -1,4 +1,4 @@
-header{
+header {
     justify-self: center;
 }
 
@@ -6,7 +6,7 @@ header{
     background-color: rgb(40, 95, 190);
 }
 
-.menu ul{
+.menu ul {
     display: flex;
     justify-content: space-evenly;
     list-style-type: none;
@@ -26,26 +26,27 @@ a:visited {
 }
 
 a:hover {
-    color:rgb(40, 95, 190);
-    background-color:#dad600;;
+    color: rgb(40, 95, 190);
+    background-color: #dad600;
 }
 
-.menu a.is_current{
-    color:#CC921A;
-    background-color:#148045;
+.menu a.is-current {
+    color: #CC921A;
+    background-color: #148045;
 }
 
-.table a.is_current{
-    color:#CC921A;
-    background-color:#148045;
+.table a.is-current {
+    color: #CC921A;
+    background-color: #148045;
 }
 
-.table ul{
+.table ul {
     display: flex;
     justify-content: space-evenly;
     list-style-type: none;
     flex-wrap: wrap;
 }
+
 .table {
     background-color: rgb(40, 95, 190);
     padding-bottom: 1250px;
