--- a/css/home_style.css
+++ b/css/home_style.css
@@ -24,6 +24,10 @@ footer {
     grid-column: 1;
     grid-row:4;
 }
+.bar-container {
+    grid-column: 1;
+    grid-row:5;
+}
 
 #pokemonLogo {
     width: 100%;
